:lock: Sign artifacts with GPG

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,22 @@
           </execution>
         </executions>
       </plugin>
+      <!-- Maven Central requires artifacts to be gpg signed -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.6</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- Configure flatten plugin to rewrite POM so that it only incldues the information required by Maven Central -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
