--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,8 @@
 language: java
 jdk: openjdk11
+before_install:
+  - echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import
+install:
+  ./mvnw --settings .maven.xml install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true -B -V
+script:
+  ./mvnw --batch-mode --settings .maven.xml clean install -Possrh
