--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ before_install:
 install:
   ./mvnw --settings .maven.xml install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true -B -V
 script:
-  ./mvnw --batch-mode --settings .maven.xml clean install -Possrh
+  ./mvnw --batch-mode --settings .maven.xml clean install -Prelease
