--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,6 @@
           </execution>
         </executions>
       </plugin>
-      <!-- configure nexus-staging-plugin to release to ossrh -->
       <plugin>
         <groupId>com.coveo</groupId>
         <artifactId>fmt-maven-plugin</artifactId>
@@ -217,6 +216,18 @@
               </execution>
             </executions>
           </plugin>
+          <!-- configure nexus-staging-plugin to release to ossrh -->
+	  <plugin>
+	    <groupId>org.sonatype.plugins</groupId>
+	    <artifactId>nexus-staging-maven-plugin</artifactId>
+	    <version>1.6.8</version>
+	    <extensions>true</extensions>
+	    <configuration>
+	       <serverId>ossrh</serverId>
+	       <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+	       <autoReleaseAfterClose>true</autoReleaseAfterClose>
+	    </configuration>
+	  </plugin>
         </plugins>
       </build>
     </profile>
