--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.johnathangilday</groupId>
   <artifactId>how-to-maven-central</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>how-to-maven-central</name>
   <description>Sample project for demonstrating deployment to Maven Central</description>
