:construction_worker: Update deployment to use a bash script
The deploy.sh script delegates to the Nexus Staging Maven Plugin using
its "rc-" goals which are intended for CLI deployments like this vs
deployments that are baked into a Maven build and associated with the
`deploy` phase.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: java
-jdk: openjdk11
-before_script:
-  - echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import
+dist: xenial # uses jdk 11 by default
 script:
-  ./mvnw --settings .maven.xml install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true -B -V
+  ./mvnw --batch-mode --settings .maven.xml install
+before_deploy:
+  - echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import
 deploy:
-  - provider: script
-    script: ./mvnw --batch-mode --settings .maven.xml clean deploy -Prelease
-    on:
-      branch: master
-      tags: true
+  skip_cleanup: true
+  provider: script
+  script: ./deploy.sh --drop-existing
+  on:
+    branch: master
+    tags: true
