--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.johnathangilday</groupId>
   <artifactId>how-to-maven-central</artifactId>
-  <version>1.1</version>
+  <version>1.6</version>
 
   <name>how-to-maven-central</name>
   <description>Sample project for demonstrating deployment to Maven Central</description>
@@ -165,6 +165,11 @@
           <artifactId>fmt-maven-plugin</artifactId>
           <version>2.8</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-gpg-plugin</artifactId>
+          <version>1.6</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
@@ -201,33 +206,10 @@
               </execution>
             </executions>
           </plugin>
-          <!-- Maven Central requires artifacts to be gpg signed -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.6</version>
-            <executions>
-              <execution>
-                <id>sign-artifacts</id>
-                <phase>verify</phase>
-                <goals>
-                  <goal>sign</goal>
-                </goals>
-              </execution>
-            </executions>
           </plugin>
-          <!-- configure nexus-staging-plugin to release to ossrh -->
-	  <plugin>
-	    <groupId>org.sonatype.plugins</groupId>
-	    <artifactId>nexus-staging-maven-plugin</artifactId>
-	    <version>1.6.8</version>
-	    <extensions>true</extensions>
-	    <configuration>
-	       <serverId>ossrh</serverId>
-	       <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-	       <autoReleaseAfterClose>true</autoReleaseAfterClose>
-	    </configuration>
-	  </plugin>
         </plugins>
       </build>
     </profile>
